--- a/README.html
+++ b/README.html
@@ -80,4 +80,5 @@
 	<li>Allow more flexibility in request ordering</li>
 	<li>Allow user-specific helper files in installation dir</li>
 	<li>Check install/run behaviour when development dependencies are not installed</li>
+	<li>Provide Ruby <span class="caps">API</span> to set expectations etc</li>
 </ul>
