--- a/README.html
+++ b/README.html
@@ -81,4 +81,5 @@
 	<li>Allow user-specific helper files in installation dir</li>
 	<li>Check install/run behaviour when development dependencies are not installed</li>
 	<li>Provide Ruby <span class="caps">API</span> to set expectations etc</li>
+	<li>Return the expected content type even if expectation fails</li>
 </ul>
