Started creating dashboard

--- a/README.html
+++ b/README.html
@@ -95,4 +95,5 @@
 	<li>Check install/run behaviour when development dependencies are not installed</li>
 	<li>Provide Ruby <span class="caps">API</span> to set expectations etc</li>
 	<li>Return the expected content type even if expectation fails</li>
+	<li>Add html view to aid debugging</li>
 </ul>
